# fastapi-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt
backend/: main.py
deploy/: Dockerfile  Jenkinsfile
env/: .env.development  .env.production  .env.test
