[project]
name = "fastapi-service"
version = "0.1.0"
description = "FastAPI Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiofiles>=24.1.0",
  "asgi-correlation-id>=4.3.4",
  "asgiref>=3.8.1",
  "asyncmy>=0.2.10",
  "bcrypt>=4.3.0",
  "celery>=5.5.0",
  "fastapi-limiter>=0.1.6",
  "fastapi-pagination>=0.12.34",
  "fastapi[standard]>=0.115.12",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "msgspec>=0.19.0",
  "path>=17.1.0",
  "pwdlib>=0.2.1",
  "pydantic>=2.11.0",
  "pydantic-extra-types>=2.10.3",
  "pydantic-settings>=2.8.1",
  "python-jose>=3.4.0",
  "python-socketio>=5.12.1",
  "redis[hiredis]>=5.2.1",
  "sqlmodel>=0.0.24",
  "user-agents>=2.2.0",
]

[dependency-groups]
lint = ["pre-commit>=4.2.0", "ruff>=0.11.2"]
dev = ["pytest>=8.3.5"]

[tool.uv]
package = false
python-downloads = "manual"


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
